--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div id="footer" class="container-fluid">
         <div class="row">
-            <div class="col-md-8">
+            <div id="part_1">
                 <form action="" class="row">
                     <div class="form-group">
                         <label for="exampleInputEmail1">your name</label>
@@ -93,8 +93,7 @@
                     </div>
                 </form>
             </div>
-
-            <div class="col-md-4">
+            <div id="part_2">
                 <button>get money now</button>
             </div>
         </div>
